Removed custom banner slider and installed package based. Fixed bug that was affecting flex layout with overflow. Additional minor changes. Category selector menu added, to be refactored

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,6 +10,7 @@
   --gradient: linear-gradient(to right, var(--primary), var(--secondary));
   --background-secondary: #e5e5e5;
   --stroke: #bf360c;
+  --swiper-pagination-color: var(--background);
 }
 
 /* @media (prefers-color-scheme: dark) {
